--- a/info.toml
+++ b/info.toml
@@ -1,9 +1,9 @@
 [meta]
-name = "Test Land"
+name = "Checkpoint Times"
 author = "zayshaa"
 category = "Testing"
 
 version = "9001"
 
 [script]
-imports = [ "Icons.as" , "Formatting.as", "Time.as"]
+imports = [ "Icons.as" , "Formatting.as", "Time.as", "lib\\ZUtil.as", "lib\\CpDataManager.as"]
