--- a/info.toml
+++ b/info.toml
@@ -1,9 +1,9 @@
 [meta]
 name = "Checkpoint Times"
 author = "zayshaa"
-category = "Testing"
+category = "HUD"
 
-version = "9001"
+version = "1.1.2"
 
 [script]
 imports = [ "Icons.as" , "Dialogs.as" , "Formatting.as", "Time.as"]
