--- a/info.toml
+++ b/info.toml
@@ -3,7 +3,8 @@ name = "Checkpoint Times"
 author = "zayshaa"
 category = "HUD"
 
-version = "1.1.2"
+version = "1.2.1"
 
 [script]
+dependencies = [ "VehicleState", "ZayUtils" ]
 imports = [ "Icons.as" , "Dialogs.as" , "Formatting.as", "Time.as"]
