--- a/info.toml
+++ b/info.toml
@@ -1,10 +1,10 @@
 [meta]
-name = "Checkpoint Times"
-author = "zayshaa"
+name = "Checkpoint Times 2"
+author = "Zayshaa"
 category = "HUD"
 
-version = "1.2.4"
+version = "2.0.0"
 
 [script]
-dependencies = [ "VehicleState" ]
+dependencies = [ "VehicleState", "MLHook", "MLFeedRaceData" ]
 imports = [ ]
