--- a/info.toml
+++ b/info.toml
@@ -1,9 +1,9 @@
 [meta]
-name = "Checkpoint Times 2"
+name = "Checkpoint Times"
 author = "Zayshaa"
 category = "HUD"
 
-version = "2.0.0"
+version = "1.0.0"
 
 [script]
 dependencies = [ "VehicleState", "MLHook", "MLFeedRaceData" ]
